kube/prod/network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: core-services
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            group: core-services
